# keel

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  RELEASING.md  build.rs
.github/workflows/: ci.yml  docs.yml  notify-web.yml  release.yml  wiki-sync.yml
crates/keel-agents/: Cargo.toml
crates/keel-agents/src/: apply.rs  error.rs  manifest.rs  merge.rs  state.rs
crates/keel-agents/tests/: end_to_end.rs
crates/keel-cache/: Cargo.toml
crates/keel-cache/src/: git.rs
crates/keel-cli/: Cargo.toml  build.rs
crates/keel-cli/src/: app.rs  constants.rs  main.rs
crates/keel-cli/src/commands/: agents.rs  completions.rs  doctor.rs  env.rs  hooks.rs  init.rs  lib.rs  mod.rs  shell.rs  update.rs  watch.rs  worktree.rs
crates/keel-cli/src/commands/install/: plan.rs  renderer.rs  runner.rs  state.rs
crates/keel-cli/src/update/: mod.rs
crates/keel-config/: Cargo.toml
crates/keel-config/src/: agents.rs  error.rs  install.rs  lib.rs  loader.rs  managed_block.rs  model.rs  scripts.rs
crates/keel-container/: Cargo.toml
crates/keel-container/src/: compose.rs  custom.rs  error.rs  lib.rs  null.rs  registry.rs
crates/keel-hooks/: Cargo.toml
crates/keel-hooks/src/: cache.rs  config.rs  error.rs  installer.rs  lib.rs  runner.rs
crates/keel-runtime/: Cargo.toml
crates/keel-runtime/src/: env.rs  error.rs  executor.rs  lib.rs  resolver.rs  services.rs  sink.rs  worktree.rs
crates/keel-tui/: Cargo.toml
crates/keel-tui/src/: app.rs  lib.rs  palette.rs  runner.rs  services.rs  syntax.rs  terminal.rs  ui.rs  watchers.rs  worker.rs
crates/scaffl-agents/: Cargo.toml
crates/scaffl-agents/src/: apply.rs  error.rs  lib.rs  manifest.rs  merge.rs  state.rs
crates/scaffl-agents/tests/: end_to_end.rs
crates/scaffl-cache/: Cargo.toml
crates/scaffl-cache/src/: error.rs  git.rs  lib.rs
crates/scaffl-cli/: Cargo.toml  build.rs
crates/scaffl-cli/src/: app.rs  constants.rs  http.rs  main.rs
crates/scaffl-cli/src/commands/: agents.rs  completions.rs  doctor.rs  env.rs  hooks.rs  init.rs  lib.rs  mod.rs  shell.rs  update.rs  watch.rs  worktree.rs
crates/scaffl-cli/src/commands/install/: mod.rs  plan.rs  renderer.rs  runner.rs  state.rs
crates/scaffl-cli/src/update/: mod.rs
crates/scaffl-config/: Cargo.toml
crates/scaffl-config/src/: agents.rs  install.rs  lib.rs  loader.rs  managed_block.rs  model.rs  scripts.rs
crates/scaffl-container/: Cargo.toml
crates/scaffl-container/src/: compose.rs  custom.rs  lib.rs  null.rs  registry.rs
crates/scaffl-container/src/devcontainer/: backend.rs  config.rs  mod.rs
crates/scaffl-hooks/: Cargo.toml
crates/scaffl-hooks/src/: cache.rs  config.rs  error.rs  git.rs  installer.rs  lib.rs  runner.rs
crates/scaffl-runtime/: Cargo.toml
crates/scaffl-runtime/src/: env.rs  error.rs  executor.rs  lib.rs  resolver.rs  services.rs  worktree.rs
crates/scaffl-tui/: Cargo.toml
crates/scaffl-tui/src/: ansi.rs  app.rs  lazygit.rs  lib.rs  palette.rs  runner.rs  services.rs  terminal.rs  ui.rs  watchers.rs  worker.rs
docs/: 01-Getting-Started.md  02-Quick-Tour.md  03-Recipes-and-Scripts.md  04-Environments.md  05-Container-Backends.md  06-Devcontainer.md  07-Non-Container-Services.md  08-Worktrees.md  09-Hooks.md  10-Agents.md  11-Install-Flow.md  12-TUI.md  13-Diff-View.md  14-Watch.md  15-Shell-Library.md  16-Configuration-Reference.md  17-Commands-Reference.md  18-Examples.md  19-Troubleshooting.md  20-Architecture.md  21-Contributing.md  Agents.md  Architecture.md  Commands-Reference.md  Configuration-Reference.md  Container-Backends.md  Contributing.md  Devcontainer.md  Diff-View.md  Environments.md  Examples.md  Getting-Started.md  Home.md  Hooks.md  Install-Flow.md  Non-Container-Services.md  Quick-Tour.md  Recipes-and-Scripts.md  Shell-Library.md  TUI.md  (+5 more)
examples/agents-upstream/: README.md  ampelos-agents.toml  croft-agents.toml  scaffl-agents.toml
examples/agents-upstream/agents/: AGENTS.md  CLAUDE.md
examples/agents-upstream/commands/: ampelos-doctor.md  croft-doctor.md  scaffl-doctor.md
examples/agents-upstream/skills/: conventional-commits.md  run-checks.md
examples/devcontainer/: README.md  ampelos.toml  croft.toml  keel.toml  scaffl.toml
examples/devcontainer/.devcontainer/: devcontainer.json
examples/hooks/: .pre-commit-config.yaml  README.md  ampelos.toml  croft.toml  keel.toml  scaffl.toml
examples/install-flow/: .gitignore  README.md  ampelos.toml  croft.toml  keel.toml  scaffl.toml
examples/install-flow/.croft/: .gitignore
examples/install-flow/.scaffl/: .gitignore
examples/laravel-app/: .pre-commit-config.yaml  README.md  ampelos.toml  croft.toml  keel.toml  scaffl.toml
examples/laravel-app/.keel/: .gitignore
examples/laravel-app/.scaffl/: .gitignore
examples/minimal/: README.md  ampelos.toml  croft.toml  keel.toml  scaffl.toml
src/: lib.rs  main.rs
src/agents/: apply.rs  error.rs  manifest.rs  merge.rs  mod.rs  state.rs
src/cache/: git.rs  mod.rs
src/cli/: app.rs  ci.rs  constants.rs  http.rs  mod.rs
src/cli/commands/: agents.rs  completions.rs  doctor.rs  env.rs  hooks.rs  init.rs  lib.rs  mod.rs  shell.rs  update.rs  watch.rs  worktree.rs
src/cli/update/: mod.rs
src/config/: agents.rs  install.rs  loader.rs  managed_block.rs  mod.rs  model.rs  scripts.rs
src/container/: compose.rs  custom.rs  mod.rs  null.rs  registry.rs
src/container/devcontainer/: backend.rs  config.rs
src/hooks/: cache.rs  config.rs  error.rs  git.rs  installer.rs  mod.rs  runner.rs
src/runtime/: env.rs  error.rs  executor.rs  mod.rs  ports.rs  resolver.rs  services.rs  sink.rs  worktree.rs
src/runtime/executor/: host.rs  mod.rs  recipe.rs  script.rs  step.rs
src/tui/: app.rs  app_boot.rs  app_run.rs  editor.rs  mod.rs  palette.rs  runner.rs  services.rs  terminal.rs  test_support.rs  ui.rs  watchers.rs  worker.rs
src/tui/dialogs/: args_prompt.rs  args_prompt_input.rs  args_prompt_view.rs  confirm.rs  confirm_input.rs  confirm_view.rs  mod.rs  palette_input.rs  palette_view.rs  switcher.rs  switcher_input.rs  switcher_view.rs
tests/: agents_integration.rs
(+61 files in other folders)
