[package]
name = "croft"
description = "Per-project dev-loop tool: Docker Compose, scripts, hooks, and agents in one config"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Niklas Rosenqvist"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nsrosenqvist/croft"
homepage = "https://croft.sh"
readme = "README.md"
keywords = ["dev-loop", "docker-compose", "tui", "cli", "wrapper"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "croft"
path = "src/main.rs"

[dependencies]
# Errors / utilities
thiserror = "2"
anyhow = "1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "0.8"
toml_edit = "0.22"
json5 = "0.4"

# Async
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "fs",
    "signal",
    "time",
    "sync",
] }
async-trait = "0.1"
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = "4"
comfy-table = "7"
dialoguer = { version = "0.11", features = ["fuzzy-select", "password"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"
nucleo-matcher = "0.3"
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
] }

# Filesystem / discovery
notify = "7"
globset = "0.4"
which = "7"
shell-escape = "0.1"
shell-words = "1"
dotenvy = "0.15"
regex = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"

# Networking (self-update)
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
semver = "1"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
tokio = { version = "1", features = ["test-util"] }

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

# Faster test compiles, with optimizations on heavy deps
[profile.dev.package."*"]
opt-level = 1
