[package]
name = "keel-tui"
description = "Embedded TUI dashboard for keel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
keel-config = { workspace = true }
keel-container = { workspace = true }
keel-runtime = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
nucleo-matcher = { workspace = true }
notify = { workspace = true }
shell-words = { workspace = true }
globset = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
syntect = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
