[package]
name = "scaffl-container"
description = "Container backend abstraction for scaffl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
shell-escape = { workspace = true }
which = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json5 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
shell-words = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
