[package]
name = "scaffl-runtime"
description = "Recipe resolver and executor for scaffl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
scaffl-config = { workspace = true }
scaffl-container = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
shell-words = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
